checker/examples/units-extension/Expected.txt
Demo.java:15: error: [assignment.type.incompatible] incompatible types in assignment.
        frq = 5;
              ^
  found   : @Scalar int
  required: @Hz int
Demo.java:71: error: [assignment.type.incompatible] incompatible types in assignment.
        @Hz int badTernaryAssign = seconds > otherSeconds ? hertz : kilohertz;
                                                          ^
  found   : @Frequency int
  required: @Hz int
2 errors
